maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:16: error: not found: value estfaceMur
			if (estfaceMur())
                            ^