maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() 
{

def keepHandOnSideWall()
{
	while(!estSurBiscuit())
	{
		if (estFaceMur())
		{
			droite()
		}
		else
		{
			gauche()
			if (estfaceMur())
			{
				droite()
				avance()
			}
			else
			{
				avance()
			}
		}
	}
}

keepHandOnSideWall()

}
